@@ -144,6 +144,7 @@ Collate:
     'position-jitter.r'
     'position-stack.r'
     'quick-plot.r'
+    'remove-geom.R'
     'save.r'
     'scale-.r'
     'scale-alpha.r'
